# brain-auth-service

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
src/api/: app.py  config.py  models.py  schemas.py
src/api/endpoints/: auth.py
tests/: conftest.py  test_endpoints.py  test_helpers.py
