[project]
name = "brain-auth-service"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
]

[tool.uv]
dev-dependencies = []
